[package]
name = "http_serv"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["log", "threading"]
log = ["dep:pretty_env_logger", "dep:log"]
threading = ["dep:scoped_threadpool"]
num_cpus = ["threading", "dep:num_cpus"]

[dependencies]
log = { version = "0.4.20", optional = true }
num_cpus = { version = "1.16.0", optional = true }
num_enum = "0.7.1"
pretty_env_logger = { version = "0.5.0", optional = true }
scoped_threadpool = { version = "0.1.9", optional = true }
