[package]
name = "http_serv"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
log = ["dep:pretty_env_logger", "dep:log", "http_base/log"]
threading = ["dep:scoped_threadpool"]
num_cpus = ["threading", "dep:num_cpus"]
ssl = ["dep:rustls"]

[dependencies]
log = { version = "0.4.20", optional = true }
num_cpus = { version = "1.16.0", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
scoped_threadpool = { version = "0.1.9", optional = true }
http_base = { git = "https://github.com/GamingGuy003/http_base.git", branch = "streamdata" }
rustls = { version = "0.23.1", optional = true }
